FGlobal finish, need detail retocretouch

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -5,7 +5,7 @@
   "fileConfigs": [
     {
       "path": "assets/sass/style.scss",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
     },
     {
       "path": "assets/sass/_variables.scss",
@@ -33,13 +33,21 @@
     {
       "path": "assets/sass/style.scss",
       "imports": [
+        "assets/sass/_normalize.scss",
+        "assets/sass/_grid.scss",
+        "assets/sass/_fonts.scss",
         "assets/sass/_variables.scss",
-        "assets/sass/_main.scss"
+        "assets/sass/_main.scss",
+        "assets/sass/pages/_blog.scss",
+        "assets/sass/_footer.scss",
+        "assets/sass/pages/_homepage.scss",
+        "assets/sass/pages/_contact.scss",
+        "assets/sass/pages/_single.scss"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
@@ -106,6 +114,7 @@
     "uploadOnChange": false,
     "ftp": {
       "secure": false,
+      "keepAlive": true,
       "host": "",
       "port": 21,
       "user": "",
