--- a/prepros-6.config
+++ b/prepros-6.config
@@ -10,6 +10,10 @@
     {
       "path": "assets/sass/_variables.scss",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "assets/sass/_sidebar.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
     }
   ],
   "fileTree": {
@@ -33,16 +37,34 @@
     {
       "path": "assets/sass/style.scss",
       "imports": [
-        "assets/sass/_normalize.scss",
-        "assets/sass/_grid.scss",
         "assets/sass/_fonts.scss",
         "assets/sass/_variables.scss",
+        "assets/sass/_mixins.scss",
+        "assets/sass/_normalize.scss",
+        "assets/sass/_grid.scss",
         "assets/sass/_main.scss",
         "assets/sass/pages/_blog.scss",
+        "assets/sass/_header.scss",
         "assets/sass/_footer.scss",
         "assets/sass/pages/_homepage.scss",
         "assets/sass/pages/_contact.scss",
-        "assets/sass/pages/_single.scss"
+        "assets/sass/pages/_single.scss",
+        "assets/sass/_sidebar.scss"
+      ]
+    },
+    {
+      "path": "huni/assets/sass/style.scss",
+      "imports": [
+        "huni/assets/sass/_normalize.scss",
+        "huni/assets/sass/_grid.scss",
+        "huni/assets/sass/_fonts.scss",
+        "huni/assets/sass/_variables.scss",
+        "huni/assets/sass/_main.scss",
+        "huni/assets/sass/pages/_blog.scss",
+        "huni/assets/sass/_footer.scss",
+        "huni/assets/sass/pages/_homepage.scss",
+        "huni/assets/sass/pages/_contact.scss",
+        "huni/assets/sass/pages/_single.scss"
       ]
     }
   ],
