Shortcodes price, beaverBuilder and more

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -49,7 +49,8 @@
         "assets/sass/pages/_homepage.scss",
         "assets/sass/pages/_contact.scss",
         "assets/sass/pages/_single.scss",
-        "assets/sass/_sidebar.scss"
+        "assets/sass/_sidebar.scss",
+        "assets/sass/_shortcodes.scss"
       ]
     },
     {
@@ -69,7 +70,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
