--- a/prepros-6.config
+++ b/prepros-6.config
@@ -14,12 +14,17 @@
     {
       "path": "assets/sass/_sidebar.scss",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "assets/sass/pages/_portfolio.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
     }
   ],
   "fileTree": {
     "expandedDirs": [
       "assets",
-      "assets/sass"
+      "assets/sass",
+      "assets/sass/pages"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -50,7 +55,8 @@
         "assets/sass/pages/_contact.scss",
         "assets/sass/pages/_single.scss",
         "assets/sass/_sidebar.scss",
-        "assets/sass/_shortcodes.scss"
+        "assets/sass/_shortcodes.scss",
+        "assets/sass/pages/_portfolio.scss"
       ]
     },
     {
