Row background, page option

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -23,7 +23,6 @@
   "fileTree": {
     "expandedDirs": [
       "assets",
-      "assets/sass",
       "assets/sass/pages"
     ],
     "hideSystemFiles": true,
@@ -56,7 +55,8 @@
         "assets/sass/pages/_single.scss",
         "assets/sass/_sidebar.scss",
         "assets/sass/_shortcodes.scss",
-        "assets/sass/pages/_portfolio.scss"
+        "assets/sass/pages/_portfolio.scss",
+        "assets/sass/_widgets.scss"
       ]
     },
     {
@@ -225,7 +225,6 @@
       "hoist_vars": false,
       "if_return": true,
       "join_vars": true,
-      "cascade": true,
       "collapse_vars": true,
       "reduce_vars": true,
       "warnings": true,
@@ -244,7 +243,6 @@
     "output": {
       "ascii_only": false,
       "beautify": false,
-      "bracketize": false,
       "comments": "",
       "indent_level": 4,
       "indent_start": 0,
